# pr-ai-agent

./: .gitignore  Readme.md
pr_review/: .env.example  .gitignore  aiagent.py  celery_config.py  example.py  github_service.py  json_knowledge.py  main.py  models.py  pyproject.toml  requirements.txt  tasks.py
pr_review/knowledge/: data.json
pr_review/src/pr_review/: crew.py  main.py
pr_review/tests/: clean_redis.py  fetch_issues.sh  get_pr_files.py  test_celery_redis.py  test_redis.py
