[project]
name = "pr_review"
version = "0.1.0"
description = "pr-review using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
pr_review = "pr_review.main:run"
run_crew = "pr_review.main:run"
train = "pr_review.main:train"
replay = "pr_review.main:replay"
test = "pr_review.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
